fix for table overflows parent div

--- a/assets/10datatable.css
+++ b/assets/10datatable.css
@@ -6,3 +6,6 @@
     display: block;
     margin: 0;
 }
+table {
+    width: 100%;
+}
